wip: projects.json

--- a/projects.json
+++ b/projects.json
@@ -112,7 +112,7 @@
     ],
     "link": "https://bitcash.org",
     "image": "https://gaboesquivel.com/images/work/bitcash-bank.png",
-    "video": "https://youtu.be/2JuHy_w0Ct4?si=osO4jUPChRrEihJm",
+    "video": "https://www.youtube.com/watch?v=2JuHy_w0Ct4",
     "repo": "https://github.com/bitcashorg"
   },
   {
