wip: work portfolio

--- a/projects.json
+++ b/projects.json
@@ -253,7 +253,7 @@
     ],
     "link": "https://holawink.com",
     "image": "https://gaboesquivel.com/images/work/wink.png",
-    "video": "https://youtu.be/rfeISMW_OVc?si=z3R4w100olo1Ydhu"
+    "video": "https://www.youtube.com/watch?v=rfeISMW_OVc"
   },
   {
     "title": "Gorilla Logic",
