content: update emanate link

--- a/projects.json
+++ b/projects.json
@@ -64,7 +64,7 @@
     ],
     "link": "https://example.com/emanate",
     "image": "https://gaboesquivel.com/images/work/emanate.png",
-    "video": "https://www.youtube.com/watch?v=VXSrROohhyA"
+    "video": "https://www.youtube.com/watch?v=qjmn7M7YC9g"
   },
   {
     "title": "Make Sense Labs Inc",
